# uni-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
outputs/: univ_programs_data.csv  univ_programs_peo_data.csv
scrapers/: scrape_cefi.py  scrape_mseuf.py
uni_crawler/: assets.py  definitions.py  jobs.py  schedules.py
