[project]
name = "uni_crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "uni_crawler.definitions"
code_location_name = "uni_crawler"

[tool.setuptools.packages.find]
exclude=["uni_crawler_tests"]
